--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "backend"]
 	path = backend
 	url = git@github.com:wavepot/backend.git
+	branch = master
 [submodule "frontend"]
 	path = frontend
 	url = git@github.com:wavepot/frontend.git
+	branch = master
